fix problem with z-index of menu slide

--- a/src/components/Header/TopMenu/TopMenu.sass
+++ b/src/components/Header/TopMenu/TopMenu.sass
@@ -1,12 +1,12 @@
 @import "../../../var.sass"
 
 .bm-menu
-  background: #fff
+  background: $accent-green
   padding: 2.5em 1.5em 0
   font-size: 2.15em
 
 .bm-morph-shape
-  fill: #fff
+  fill: $accent-green
 
 .bm-burger-bars
   background: $accent-orange
